<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">工事</string>
    <string name="app_label">工事</string>
    <string name="app_error">程序异常退出</string>
    <string name="settings">设置</string>
    <string name="confirm">确定</string>
    <string name="cancel">取消</string>
    <string name="save">保存</string>
    <string name="warning">提示</string>
    <string name="loading">拼命加载中…</string>
    <string name="import_contact">导入</string>
    <string name="http_error">网络不给力,请检查您的网络连接</string>
    <string name="http_null">当前无网络连接,请设置您的网络连接</string>
    <string name="http_out">服务器离家出走了</string>
    <string name="choose_file">选择文件</string>
    <string name="null_file_manager">请先安装一个文件管理器</string>
    <string name="sdcard_error">请检查存储卡是否挂载</string>
    <string name="developing">小猿努力coding中，尽请期待</string>
    <string name="exit_toast">再按一次返回键退出</string>
    <string name="unknow">未知</string>
    <string name="delete">删除</string>
    <string name="add">添加</string>
    <string name="new_">新增</string>
    <string name="add_task">添加新任务</string>
    <string name="add_task_detail">添加更多任务</string>
    <string name="info_delete_task">确定删除此任务？</string>
    <string name="dial_error">电话号码格式有误</string>
    <string name="list_empty">这里什么都没有哦,下拉刷新试试吧~~~</string>
    <string name="null_input">请输入有效字符</string>
    <string name="search_hint">请输入关键字</string>
    <string name="list">无图模式</string>
    <string name="grid">大图模式</string>
    <string name="code_tip">请将二维码置于扫描框的红线，即可自动扫描</string>
    <string name="qrcode_scanning">二维码扫描</string>
    <string name="error_qrcode">不支持此二维码格式</string>
    <string name="null_phone_contace">请选择需要导入的联系人</string>
    <string name="null_leaf">请选择需要点工的下级</string>

    <!-- 登陆&注册 -->
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="login_hint_name">请输入姓名</string>
    <string name="login_hint_phone">请输入手机号码</string>
    <string name="login_hint_password">请输入密码</string>
    <string name="login_hint_password1">请设置密码</string>
    <string name="login_hint_sms">请输入验证码</string>
    <string name="login_sms_verify">获取短信验证码</string>
    <string name="login_sms_timer">重新发送(%d)</string>
    <string name="login_remember_pwd">记住密码</string>
    <string name="login_empty_name">请输入姓名</string>
    <string name="login_empty_phone">请输入手机号码</string>
    <string name="login_empty_psw">请输入密码</string>
    <string name="login_empty_sms">请输入短信验证码</string>
    <string name="login_sms_send">短信验证码已发送至您的手机,请注意查收</string>
    <string name="login_sms_send_error">短信验证码发送失败,请重试</string>
    <string name="login_error_phone">请输入正确的手机号码</string>
    <string name="register_new_account">注册新账号</string>
    <string name="forget_psw">忘记密码</string>
    <string name="verify_sms">短信验证</string>
    <string name="reset_psw">修改密码</string>
    <string name="reset_psw_hint">请输入新密码</string>
    <string name="reset_psw_hint2">请再次输入新密码</string>
    <string name="reset_psw2_null">请输入确认密码</string>
    <string name="different_psw">两次输入的密码不一致</string>

    <!-- 主页 -->
    <string name="title_project_manager">项目</string>
    <string name="title_contact">通讯录</string>
    <string name="title_scanning">每日签到</string>
    <string name="title_today">今日考勤</string>
    <string name="title_work_space">工作圈</string>
    <string name="title_attendance_record">签到记录</string>
    <string name="title_scanning_out">外勤签到</string>
    <string name="title_attendance">签到</string>
    <string name="title_user_center">个人中心</string>
    <string name="scanning_leaf_project">点工签到</string>
    <string name="title_home">主页</string>
    <string name="title_setting">设置</string>
    <string name="title_agreement">《工事用户使用协议》</string>
    <string name="out_of_project_location">您当前位置无激活项目</string>
    <string name="current_project">当前激活项目：%s</string>
    <string name="scanning_for_other">温馨提示：在此页面，接收来电后可为其签到</string>
    <string name="scanning_null_photo">请确认拍照是否成功</string>
    <string name="scanning_call_listen">是否为%s拍照签到?</string>
    <string name="scanning_history">历史工友</string>
    <string name="login_time_out">登录超时,请重新登录</string>
    <string name="photograph_he">拍他（她）</string>

    <!-- 个人信息 -->
    <string name="lable_user_detail">详细资料</string>
    <string name="sex">性别:</string>
    <string name="male">男</string>
    <string name="female">女</string>
    <string name="lable_head">头像</string>
    <string name="lable_name">姓名</string>
    <string name="lable_project">项目名</string>
    <string name="lable_phone">电话</string>
    <string name="lable_qrcode">我的二维码</string>
    <string name="lable_qrcode_scanning">二维码添加</string>
    <string name="lable_phone_contace">通讯录导入</string>
    <string name="lable_sex">性别</string>
    <string name="lable_remark">个人说明</string>
    <string name="lable_certification">资质认证</string>
    <string name="lable_idcard">身份证号</string>
    <string name="lable_idcard_img">身份证照</string>
    <string name="lable_rate">每日一评</string>
    <string name="lable_rate_today">今日评价</string>
    <string name="lable_rate_history">历史评价</string>
    <string name="lable_rate_content">请输入您对该用户的评价</string>
    <string name="lable_score">%s分</string>
    <string name="lable_address">位置</string>
    <string name="modify_user_name">修改姓名</string>
    <string name="modify_user_remark">修改个人说明</string>
    <string name="modify_user_idcard">修改身份证号</string>
    <string name="hint_user">建议输入真实信息方便沟通</string>
    <string name="hint_remark">用几句话介绍一下自己吧~~~</string>
    <string name="hint_idcard">请输入您的身份证号</string>
    <string name="lable_idcard_front">身份证正面照：</string>
    <string name="lable_idcard_back">身份证反面照：</string>
    <string name="lable_idcard_hand">手持身份证照：</string>
    <string name="call">拨打电话</string>

    <!-- 附件 -->
    <string name="title_attach_select">请选择文件</string>
    <string name="photograph">拍照</string>
    <string name="album">从相册选取</string>
    <string name="pick_error">没有可用的图片资源管理器</string>
    <string name="can_not_read_img">无法读取图片</string>
    <string name="title_image_crop">头像设置</string>

    <!-- 项目管理 -->
    <string name="project_join">加入</string>
    <string name="project_exit">退出</string>
    <string name="project_close">关闭</string>
    <string name="info_exit_project">确定退出此项目？</string>
    <string name="project_current">当前激活项目</string>
    <string name="project_manager">所有项目</string>
    <string name="project_create">新建项目</string>
    <string name="project_hint_name">请输入项目岗位</string>
    <string name="project_hint_address">请输入项目地址</string>
    <string name="address_search_failed">地址解析失败,请确认地址信息</string>
    <string name="location_search_failed">获取地址失败,请重试</string>
    <string name="location_failed">定位失败,请重试</string>
    <string name="null_project_name">请填写项目名</string>
    <string name="null_project_location">缺少项目位置信息</string>
    <string name="null_project">您当前未加入任何项目</string>
    <string name="modify_project_name">修改项目岗位</string>

    <!-- 项目详情 -->
    <string name="project_detail">项目详情</string>
    <string name="project_create_leaf">创建子项目</string>
    <string name="project_name">项目岗位：\n%s</string>
    <string name="project_status_close">已关闭</string>
    <string name="project_manager_user">管理员：%s</string>
    <string name="project_create_time">创建时间：\n%s</string>
    <string name="project_address">项目地址：\n%s</string>
    <string name="project_leaf">项目成员</string>
    <string name="project_user">项目通讯录</string>
    <string name="project_update_parent">项目迁移</string>
    <string name="project_update_parent_hint">温馨提示:在此页面，接收来电后可设置其为当前项目下级</string>
    <string name="project_join_current">是否将%s设置为当前项目的下级项目</string>

    <!-- 考勤记录 -->
    <string name="select_date">选取日期</string>
    <string name="sum_start_date">起始日期:</string>
    <string name="sum_end_date">结束日期:</string>
    <string name="startdate_after_enddate">起始日期不能大于结束日期,请重新选择日期</string>
    <string name="sum_by_user">个人签到记录</string>
    <string name="sum_by_project">项目签到记录</string>
    <string name="sum_exception_section">异常签到记录</string>
    <string name="sum_normal_section" formatted="false">总用工人数:%d人次</string>
    <string name="sum_exception_null">无异常签到记录</string>
    <string name="sum_normal_null">无任何签到记录</string>
    <string name="sum_exception_total">有%d条异常签到记录</string>
    <string name="sum_normal_total">总用工人数:%d人次</string>
    <string name="sum_user_total" formatted="false">%s至%s共有%d次签到记录</string>
    <string name="sum_user_null" formatted="false">%s至%s无任何签到记录</string>
    <!-- <string name="sum_pro_total" formatted="false">共有%d次签到记录,其中有%d次异常签到</string> -->
    <string name="sum_pro_total" formatted="false">%s至%s共有%d次签到记录,其中外勤签到记录%d次</string>
    <string name="sum_pro_item" formatted="false">共有%d次签到记录,其中外勤签到记录%d次</string>

    <!-- 设置 -->
    <string name="feed_back">意见反馈</string>
    <string name="agreement">用户协议</string>
    <string name="share_version">分享给好友</string>
    <string name="share_title">将工事分享给好友</string>
    <string name="share_text">我正在使用工事，项目管理快捷方便，猛戳这里下载:%s</string>
    <string name="share_img">我正在使用工事，项目管理快捷方便，扫描二维码或猛戳这里下载:%s</string>
    <string name="two_code">扫描二维码下载</string>
    <string name="apk_downloading">apk下载中</string>
    <string name="version_update">版本更新</string>
    <string name="apk_download_finish">下载完成,点击安装</string>
    <string name="apk_download_failed">下载失败,点击重试</string>
    <string name="logout">退出登录</string>
    <string name="hint_feedback">欢迎吐槽您在使用过程中的不便,我们将积极采纳您提出的宝贵意见</string>
    <string name="thanks_for_feedback">感谢您的宝贵意见</string>
    <string name="version_newest">当前已是最新版本</string>
    <string name="version_has_new">发现新版本:%s</string>
    <string name="update">更新</string>
    <string name="ignore">忽略</string>

    <!-- 工作圈 -->
    <string name="send">发送</string>
    <string name="post">发帖</string>
    <string name="comment">评论</string>
    <string name="much_file">最多添加9个文件</string>

    <!-- 任务管控 -->
    <string name="lable_task">任务管控</string>
    <string name="lable_task_all">所有任务</string>
    <string name="lable_task_create">我分配的</string>
    <string name="lable_task_process">我执行的</string>
    <string name="lable_task_new">新增任务</string>
    <string name="lable_task_detail">任务详情</string>
    <string name="lable_task_root">当前项目：</string>
    <string name="lable_task_create_user">创建人：</string>
    <string name="lable_task_process_user">执行人：</string>
    <string name="lable_task_content">任务描述：</string>
    <string name="hint_task_content">请输入任务描述</string>
    <string name="lable_task_start_time">开始时间：</string>
    <string name="lable_task_end_time">确认时间：</string>
    <string name="lable_select_process_user">选择执行人</string>
    <string name="toast_empty_task_content">请输入任务描述</string>
    <string name="lable_task_process_content">处理结果：</string>
    <string name="toast_out_of_ten_task">最多允许添加十个任务</string>
    <string name="task_status_pending_confirmation">待确认</string>
    <string name="task_status_no_completed">未完成</string>
    <string name="task_status_completed">已完成</string>
    <string name="hint_task_process_content">请输入处理结果</string>
    <string name="toast_empty_task_process_content">请输入处理结果</string>
</resources>