<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/layout_bg" >

    <include layout="@layout/top_bar" />

    <ScrollView
        style="@style/layout_body"
        android:scrollbars="none" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingLeft="20dp"
            android:paddingRight="20dp" >

            <EditText
                android:id="@+id/register_phone"
                style="@style/base_edit_text"
                android:layout_marginTop="30dp"
                android:drawableLeft="@drawable/ic_phone"
                android:hint="@string/login_hint_phone"
                android:inputType="phone"
                android:maxLength="11" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center_vertical"
                android:orientation="horizontal" >

                <EditText
                    android:id="@+id/register_sms"
                    style="@style/base_edit_text"
                    android:layout_width="wrap_content"
                    android:gravity="center"
                    android:hint="@string/login_hint_sms"
                    android:inputType="numberSigned"
                    android:maxLength="4" />

                <Button
                    android:id="@+id/register_verify"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/btn_common"
                    android:layout_marginLeft="10dp"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:text="@string/login_sms_verify"
                    android:textColor="@color/white"
                    android:textSize="15sp" />
            </LinearLayout>

            <Button
                android:id="@+id/register_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:background="@drawable/btn_common"
                android:padding="10dp"
                android:text="@string/reset_psw"
                android:textColor="@color/white"
                android:textSize="18sp" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>