<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/lable_task_process_user"
            android:textSize="@dimen/menu_text_size" />

        <Button
            android:id="@+id/task_process_user"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:background="@drawable/spinner"
            android:textColor="@color/text_normal"
            android:textSize="@dimen/menu_text_size" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/lable_task_content"
            android:textSize="@dimen/menu_text_size" />

        <EditText
            android:id="@+id/task_create_content"
            style="@style/base_edit_text"
            android:layout_width="0dp"
            android:layout_weight="3"
            android:gravity="left|top"
            android:hint="@string/hint_task_content"
            android:lines="5"
            android:maxLength="3000"
            android:singleLine="false"
            android:textColor="@color/text_normal" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/lable_task_start_time"
            android:textSize="@dimen/menu_text_size" />

        <Button
            android:id="@+id/task_start_time"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:background="@drawable/input_bg_round"
            android:drawableRight="@drawable/ic_date"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="2015-06-12"
            android:textColor="@color/text_normal" />
    </LinearLayout>

    <com.zzn.aeassistant.view.FastenGridView
        android:id="@+id/task_create_attach_list"
        style="@style/base_attach_grid" />

</LinearLayout>