<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/layout_bg" >

    <include layout="@layout/top_bar" />

    <ScrollView style="@style/layout_body" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="20dp" >

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@color/gainsboro" />

            <TextView
                android:id="@+id/setting_modify_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/btn_top"
                android:drawableRight="@drawable/ic_to"
                android:gravity="left|center_vertical"
                android:padding="15dp"
                android:text="@string/reset_psw"
                android:textColor="@drawable/text_normal"
                android:textSize="18sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@color/gainsboro" />

            <TextView
                android:id="@+id/setting_version_update"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/btn_top"
                android:drawableRight="@drawable/ic_to"
                android:gravity="left|center_vertical"
                android:padding="15dp"
                android:text="@string/version_update"
                android:textColor="@drawable/text_normal"
                android:textSize="18sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@color/gainsboro" />

            <TextView
                android:id="@+id/setting_feedback"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/btn_top"
                android:drawableRight="@drawable/ic_to"
                android:gravity="left|center_vertical"
                android:padding="15dp"
                android:text="@string/feed_back"
                android:textColor="@drawable/text_normal"
                android:textSize="18sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@color/gainsboro" />

            <Button
                android:id="@+id/logout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:background="@drawable/btn_common"
                android:padding="8dp"
                android:text="@string/logout"
                android:textColor="@color/white"
                android:textSize="18sp" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>