<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/transparent"
    android:gravity="bottom"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/body_bg"
        android:clickable="true"
        android:gravity="bottom"
        android:orientation="vertical" >

        <Button
            android:id="@+id/menu_photograph"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/menu_item"
            android:padding="10dp"
            android:text="@string/photograph"
            android:textColor="@drawable/text_normal"
            android:textSize="18sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/darkgray" />

        <Button
            android:id="@+id/menu_album"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/menu_item"
            android:padding="10dp"
            android:text="@string/album"
            android:textColor="@drawable/text_normal"
            android:textSize="18sp" />
        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/darkgray" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_marginTop="20dp"
            android:background="@color/darkgray" />

        <Button
            android:id="@+id/menu_cancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/menu_item"
            android:padding="10dp"
            android:text="@string/cancel"
            android:textColor="@drawable/text_normal"
            android:textSize="18sp" />
    </LinearLayout>

</LinearLayout>